<resources>
    <string name="app_name">Foodie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favourite_fragment">Favourites</string>
    <string name="jokes_fragment">Food Jokes</string>
    <string name="menu">Menu</string>
    <string name="not_connected">Not Connected</string>
    <string name="no_internet_connection">!! No Internet Connection !!</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="like">Like</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="food_type">Food Type</string>
</resources>