<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".views.RecipesFragment">

    <com.todkars.shimmer.ShimmerRecyclerView
        android:id="@+id/recipes_shimmerRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:shimmer_recycler_item_count="3"
        app:shimmer_recycler_layout="@layout/placeholder_for_recipes_card_view"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/menu"
        android:focusable="true"
        android:src="@drawable/ic_restaurant_menu"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/no_internet_image_view"
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:alpha="0.6"
        android:contentDescription="@string/not_connected"
        android:src="@drawable/ic_no_internet"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33999997" />

    <TextView
        android:id="@+id/error_no_internet_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.6"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/no_internet_connection"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="@+id/no_internet_image_view"
        app:layout_constraintStart_toStartOf="@+id/no_internet_image_view"
        app:layout_constraintTop_toBottomOf="@+id/no_internet_image_view"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>