<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="result"
            type="com.example.foodie.models.source.Result" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/recipes_CardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/recipe_image"
                    loadImageFromUrl="@{result.image}"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/recipe_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.45"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/recipe_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:text="@{result.title}"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toTopOf="@id/recipe_desc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/recipe_desc"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:paddingTop="8dp"
                    android:text="@{result.summary}"
                    app:layout_constraintBottom_toTopOf="@id/number_of_likes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_name"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@tools:sample/lorem/random" />

                <ImageView
                    android:id="@+id/like_image_view"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="true"
                    android:contentDescription="@string/like"
                    android:focusable="true"
                    android:src="@drawable/thumbs_up"
                    app:layout_constraintBottom_toTopOf="@id/number_of_likes"
                    app:layout_constraintEnd_toStartOf="@id/favourite_image_view"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/recipe_desc"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/number_of_likes"
                    setNumberOfLikes="@{result.aggregateLikes}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/like_image_view"
                    app:layout_constraintStart_toStartOf="@id/like_image_view"
                    app:layout_constraintTop_toBottomOf="@id/like_image_view"
                    tools:text="12k" />

                <ImageView
                    android:id="@+id/favourite_image_view"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/add_to_favourite"
                    android:src="@drawable/ic_favorite"
                    app:layout_constraintBottom_toTopOf="@id/popularity_text_view"
                    app:layout_constraintEnd_toStartOf="@id/food_type_image_view"
                    app:layout_constraintStart_toEndOf="@id/like_image_view"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_desc"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/popularity_text_view"
                    setNumberOfFavorites="@{result.likes}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/favourite_image_view"
                    app:layout_constraintStart_toStartOf="@id/favourite_image_view"
                    app:layout_constraintTop_toBottomOf="@id/favourite_image_view"
                    tools:text="123" />

                <ImageView
                    android:id="@+id/food_type_image_view"
                    android:layout_width="50dp"
                    vegOrNonVeg="@{result.vegan}"
                    android:layout_height="50dp"
                    android:contentDescription="@string/food_type"
                    android:src="@drawable/veg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/favourite_image_view"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_desc" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>